<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.MaterialComponents.Light"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_10sdp"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/colorAccent"
        app:strokeWidth="@dimen/_1sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_18sdp"
        android:layout_marginVertical="@dimen/_18sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <TextView
            android:id="@+id/tv_logout_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/loging_out"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toTopOf="@id/message_logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/message_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/are_you_sure_you_want_to_log_out"
            android:textAlignment="center"
            android:textColor="@color/st1_typo"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toTopOf="@id/logout_btn_yes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_logout_header"
            app:layout_constraintVertical_bias="0.5" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/logout_btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/prompt_light"
            android:paddingHorizontal="@dimen/_35sdp"
            android:paddingVertical="@dimen/_5sdp"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:backgroundTint="@color/red_light"
            app:cornerRadius="@dimen/_40sdp"
            app:elevation="@dimen/_3sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/logout_cancel_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/message_logout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logout_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/prompt_light"
            android:paddingHorizontal="@dimen/_20sdp"
            android:paddingVertical="@dimen/_5sdp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:backgroundTint="@color/primary"
            app:cornerRadius="@dimen/_40sdp"
            app:elevation="@dimen/_3sdp"
            app:layout_constraintBottom_toBottomOf="@id/logout_btn_yes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/logout_btn_yes"
            app:layout_constraintTop_toTopOf="@id/logout_btn_yes"
            app:strokeColor="@color/colorAccent"
            app:strokeWidth="@dimen/_1sdp" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>